[package]
name = "actule"
version = "0.4.11"
authors = ["Kiley Owen <yelikdev@gmail.com>"]

[dependencies]
piston_window = "0.47.2"
id_alloc = {git = "https://github.com/yeliknewo/id_alloc.git", version = "0.4.3"}
ncollide = "0.9.1"
nalgebra = "0.8.2"
gfx_device_gl = "0.10.0"
piston2d-opengl_graphics = "0.30.0"
